Added 3 recipe HTML files. Created template for pizza recipe and added a link in the index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
     <h1>The Odin Project - Recipes project</h1>
+    <br>
+    <ul>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+    </ul>
 </body>
 
 </html>
