Added pizza image, and updated pizza.html with the recipe page content.

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,90 @@
 </head>
 <body>
     <h1>Pizza Recipe</h1>
+    <img src="../images/pizza.jpeg" alt="Delicious Pizza Pie" width="300">
+    <h2>Description</h2>
+    <h3>Dough ingredients (Baker’s %)</h3>
+    <ul>
+        <li>560 grams of flour</li>
+        <li>335 grams of water (60%)</li>
+        <li>17 grams of sea salt (3%)</li>
+        <li>11 grams of sugar (2%)</li>
+        <li>11 grams of barley malt (2%)</li>
+        <li>11 grams of extra virgin olive oil (2%)</li>
+        <li>1 gram of active dry yeast</li>
+    </ul>
+    <p>A lot of people use 00 and go for very high hydration dough. I highly recommend bread flour - local if you have a mill nearby - 
+        and keeping your hydration between 58 and 62 percent.</p>
+    <p>*The malt is optional and helps with browning and to strengthen the dough for longer fermentation. If you don’t have it, you can 
+        omit it and still make great pizza.</p>
+    <h3>Rest of the ingredients</h3>
+    <ul>
+        <li>Tomato Sauce</li>
+        <li>Cheese</li>
+        <li>Pepperoni</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>For added flavor and crispness, I like to start with a preferment, using 150 grams water, 150 grams flour, 
+            and 1 gram of active dry yeast. Seems fancy and advanced, but it’s super simple and only takes a few minutes 
+            to prepare! Mix with a dinner fork in a tall deli container until blended, seal, and rest at room temperature 
+            for 3-5 hours. The mixture will triple in volume. Place in the refrigerator for roughly 12 hours. If you want 
+            to skip this step, you can! You’ll still make great pizza.</li>
+        <li>For the main dough, add 185 grams of room temperature water into a mixing bowl. Use a spatula to gently add 
+        the cold preferment. Turn the mixer on low speed for one minute. The water should become milky white, and you 
+        don’t need to achieve a smooth consistency at this step.</li>
+        <li>[If you skipped the preferment, you’ll be using the full 335 grams of water here, and also adding the 1 gram 
+        of yeast at this step.]</li>
+        <li>Stop the mixer and add the remaining 410 grams of flour [560 grams if you skipped the preferment]. Begin to 
+        mix on low speed again, and slowly sprinkle the sugar, salt, and malt into the dough, allowing it to distribute 
+        evenly. Mix for 8-10 minutes, or until the dough is smooth and cleaning the sides of the mixing bowl.</li>
+        <li>Add the oil and turn the mixer up to medium speed to finish mixing. The dough is ready when the oil has been 
+        incorporated. If you don’t have olive oil, other oils will work, too, but each will have their own flavor (or 
+        no flavor at all).</li>
+        <li>Turn the dough out onto a clean counter, and knead by hand for 1 to 2 minutes to form a large, smooth ball. You 
+        shouldn’t have to use any added flour or oil. The dough should be easy to work.</li>
+        <li>Cover with the mixing bowl, turned upside down, and rest for 5 hours.</li>
+        <li>After the rest, remove the bowl and divide the dough into two equal parts, roughly 460 grams each. Ball the 
+        dough until smooth and tight, seal the bottom with a pinch, and place into large, lightly oiled deli containers 
+        or tupperware to ferment in the fridge.</li>
+        <li>The pizza dough can stay in the fridge for several days, and will become more flavorful and aromatic the longer 
+        you allow it to ferment. My ideal target time for the cold ferment is 24 to 72 hours.</li>
+        <li>When you’re ready to make pizza, remove the dough from the fridge and allow to rest at room temperature for 3 
+        hours before stretching.</li>
+        <li>For cheese, you can use whatever blend you like, but traditionally NY style calls for whole milk, low moisture 
+        mozzarella shredded from a block. I prefer blending in some provolone for flavor, again shredded by hand.</li>
+        <li>I use 7 ounces of cheese for a 16” pizza and add it to the pizza when cold. This pizza was made with Grande 
+        mozzarella and Belgioioso provolone.</li>
+        <li>The sauce is a simple raw tomato using a 28 ounce can of crushed tomatoes. I really like Bianco DiNapoli or 
+        Sclafani if you can find them. If not, I recommend experimenting with a few good brands. Quality and taste 
+        vary wildly, and make a real difference. You can crush your own whole tomatoes, but many brands pack them in 
+        not so great juice that you’ll need to drain and then adjust to season properly.</li>
+        <li>To the tomatoes, add one teaspoon of sea salt, one half teaspoon sugar (optional), and a small amount of dried 
+        basil, dried oregano, red pepper, and black pepper. Garlic and olive oil are also great additions.</li>
+        <li>Blend the sauce in advance and store in a sealable container, not the can. I recommend 5-6 ounces of sauce for 
+        a 16” pizza. One 28 ounce can will be enough for about 5-6 pizzas and it keeps for a week in the fridge.</li>
+        <li>Preheat your oven for one hour at 500 to 550 degrees Fahrenheit with a stone or steel positioned on the middle 
+        rack.</li>
+        <li>Get all of your toppings ready, so you can work quickly to stretch, top, and launch your pizza without the dough 
+        sticking to the peel. Gotta go fast!</li>
+        <li> <a href="https://youtu.be/GtAeKM_f2WU">How to Stretch a Pizza Dough (YouTube)</a></li>
+        <li>I prefer fine Semolina flour for the stretch. It doesn’t add flavor and helps the pizza slide nicely off the peel 
+        with no sticking.</li>
+        <li>After stretching, add the sauce to the center of the shell and gently spread outward in a spiral, leaving room 
+        at the outer edge for a 1/2” to 1” crust.</li>
+        <li>Sprinkle Parmesan or Romano cheese over the sauce and if you like, you can add additional dried oregano here or 
+        after the mozzarella (or both!). Crush the oregano in your palm before you add it to gain entry to Flavor Town.</li>
+        <li>Add your cheese, from edge to the center, covering all the sauce and distributing it evenly. Add any other toppings 
+        you want, being careful not to overload the pizza. Pineapple is cool if you’re into it. Your pizza. Your toppings.</li>
+        <li>Launch your pizza and cook it!</li>
+        <li>The lower the temperature, the longer your bake time will be, ranging from 6 to 10 minutes. If you like a darker 
+        crust, or need more top heat to finish the cheese, you can use a broiler for the last 2 to 3 minutes. Turn the 
+        pizza once or twice to make sure it gets an even bake. Most ovens have hot spots.</li>
+        <li>Remove the pizza when it’s finished to your liking and allow it to cool on a wire rack to keep the base crispy 
+        and to prevent the roof of mouth from being absolutely annihilated by molten hot cheesy goodness. After five to 
+        seven minutes, slice it into eight pieces and eat it.</li>
+    </ol>
+    <p>Share if you’re feeling generous.</p>
+    <p>Enjoy your pizza!</p>
 </body>
 </html>
