--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <br>
     <ul>
         <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
+        <li><a href="./recipes/steak.html">Steak</a></li>
     </ul>
 </body>
 
