Added image for Shepherd's pie and updated its recipe page with content

--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -6,25 +6,46 @@
 </head>
 <body>
     <h1>Shepherd's Pie Recipe</h1>
-    <img src="" alt="">
+    <img src="../images/shepherd-pie.webp" alt="Shepherd's Pie">
     <h2>Description</h2>
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 onion, chopped</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 teaspoon dried thyme</li>
+        <li>1 teaspoon dried rosemary</li>
+        <li>1 teaspoon salt</li>
+        <li>1 teaspoon pepper</li>
+        <li>1 pound lean ground beef</li>
+        <li>4 teaspoons all-purpose flour</li>
+        <li>¼ cup Heinz Tomato Ketchup</li>
+        <li>¾ cup Heinz® Tomato Juice</li>
+        <li>2 tablespoons Heinz Worcestershire Sauce</li>
+        <li>2 tablespoons Dijon mustard</li>
+        <li>1 cup frozen mixed vegetables (such as peas and carrots)</li>
+        <li>3 cups cooked, warm, mashed potatoes</li>
+        <li>2 tablespoons butter</li>
+        <li>1 clove garlic, minced</li>
+        <li>⅔ cup warm milk</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Preheat the oven to 350 degrees F (180 degrees C).</li>
+        <li>Heat oil in a skillet set over medium heat. Add onion, garlic, thyme, rosemary, 
+            and 1/2 of the salt and pepper. Cook, stirring often, for 5 to 7 minutes.</li>
+        <li>Crumble ground beef into pan and cook until brown all over. Sprinkle with flour. 
+            Stir in ketchup, tomato juice, Worcestershire sauce and mustard. Simmer for 5 minutes. 
+            Stir in mixed vegetables. Transfer to a 9-inch baking dish.</li>
+        <li>Whip mashed potatoes with warm milk, remaining salt and pepper, butter, and garlic until 
+            very fluffy. Spread potatoes evenly over meat mixture.</li>
+        <li>Bake in the preheated oven until potatoes are golden on top, about 35 minutes.</li>
     </ol>
+    <h3>Recipe Tips</h3>
+    <ul>
+        <li>For a meatless version, substitute 4 cups of chopped mushrooms for the meat.</li>
+        <li>For a pub-style shepherd's pie, use ground lamb instead of beef and mark the potatoes with the tines of a fork.</li>
+        <li>This casserole can be assembled and refrigerated for up to 2 days before baking. Increase cooking time to 45 minutes.</li>
+    </ul>
 </body>
 </html>
