Updated header for ingredients section

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,8 @@
     <h1>Pizza Recipe</h1>
     <img src="../images/pizza.jpeg" alt="Delicious Pizza Pie" width="300">
     <h2>Description</h2>
-    <h3>Dough ingredients (Baker’s %)</h3>
+    <h3>Ingredients</h3>
+    <h4>Dough (Baker’s %)</h4>
     <ul>
         <li>560 grams of flour</li>
         <li>335 grams of water (60%)</li>
@@ -22,7 +23,7 @@
         and keeping your hydration between 58 and 62 percent.</p>
     <p>*The malt is optional and helps with browning and to strengthen the dough for longer fermentation. If you don’t have it, you can 
         omit it and still make great pizza.</p>
-    <h3>Rest of the ingredients</h3>
+    <h4>Pizza</h4>
     <ul>
         <li>Tomato Sauce</li>
         <li>Cheese</li>
